# filter_gaussian

./: .clang-format  CMakeLists.txt  README.md
include/: mainwindow.h
src/: about.cpp  about.ui  mainwindow.cpp  mainwindow.ui
